- Increase map size - add space - test auto pull

--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@ body {
 </style>
 </head>
 <body>
-    <div id="map" style="width: 900px; height: 450px"></div>
-    <div id="contact">
+    <div id="map" style="width: 1000px; height: 550px"></div>
+    <div id="contact">a
+    <br />
     Current group members:<br />
     <a href="mailto:mt@trustdarkness.com">Mike Thompson</a><br />
     <a href="mailto:bspahr314@gmail.com">Brian Spahr</a><br />
