--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body {
 </head>
 <body>
     <div id="map" style="width: 1000px; height: 550px"></div>
-    <div id="contact">a
+    <div id="contact">
     <br />
     Current group members:<br />
     <a href="mailto:mt@trustdarkness.com">Mike Thompson</a><br />
