--- a/index.html
+++ b/index.html
@@ -13,14 +13,10 @@ body {
   font-family: Droid-Sans, Helvetica, sans;
   font-size: 10pt;
 }
-<script>
-  window.x = w.innerWidth || e.clientWidth || g.clientWidth;
-  window.y = w.innerHeight|| e.clientHeight|| g.clientHeight;
-</script>
 </style>
 </head>
 <body>
-    <div id="map" style="width: 1000px; height: 550px"></div>
+    <div id="map"></div>
     <div id="contact">
     <br />
     Current group members:<br />
@@ -33,10 +29,12 @@ body {
     </script>
 
     <script>
-        d3.select("map")
-          .style("width", window.x)
-          .style("height", window.y-200);
-        var map = L.map('map').setView([41.90, -87.65], 13);
+       var x = w.innerWidth || e.clientWidth || g.clientWidth;
+       var y = w.innerHeight|| e.clientHeight|| g.clientHeight;
+       d3.select("#map")
+        .attr("width", x)
+        .attr("height", y-200);
+       var map = L.map('map').setView([41.90, -87.65], 13);
         mapLink = 
             '<a href="http://openstreetmap.org">OpenStreetMap</a>';
         L.tileLayer(
@@ -54,6 +52,7 @@ body {
 	    marker.bindPopup(stations[i].name +"<br />capacity: "+stations[i].dpcapacity);
 	}
       })
+ 
     </script>
 </body>
 </html>
