--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 </style>
 </head>
 <body>
-    <div id="map"></div>
+    <div id="map" style="width: 550; height: 600;"></div>
     <div id="contact">
     <br />
     Current group members:<br />
@@ -29,11 +29,6 @@ body {
     </script>
 
     <script>
-       var x = w.innerWidth || e.clientWidth || g.clientWidth;
-       var y = w.innerHeight|| e.clientHeight|| g.clientHeight;
-       d3.select("#map")
-        .attr("width", x)
-        .attr("height", y-200);
        var map = L.map('map').setView([41.90, -87.65], 13);
         mapLink = 
             '<a href="http://openstreetmap.org">OpenStreetMap</a>';
