--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
 </style>
 </head>
 <body>
-    <div id="map" style="width: 550; height: 600;"></div>
+    <div id="map" style="width: 100%; height: 800px"></div>
     <div id="contact">
     <br />
     Current group members:<br />
@@ -29,11 +29,7 @@ body {
     </script>
 
     <script>
-<<<<<<< HEAD
-       var map = L.map('map').setView([41.90, -87.65], 13);
-=======
         var map = L.map('map').setView([41.90, -87.65], 13);
->>>>>>> parent of 1a87d04... Dynamic width and height
         mapLink = 
             '<a href="http://openstreetmap.org">OpenStreetMap</a>';
         L.tileLayer(
