added libraries used

--- a/index.html
+++ b/index.html
@@ -61,7 +61,13 @@
               </div>
             </div>
             <div class="sidebar-pane" id="messages"><h1>Messages</h1></div>
-            <div class="sidebar-pane" id="settings"><h1>Settings</h1></div>
+            <div class="sidebar-pane" id="settings">
+              <h1>Libraries Used:</h1>
+              <p>Third party libraries we used include the following:</p>
+              <h3>d3</h3>
+              <h3>leaflet</h3>
+              <h3>leaflet-sidebar</h3>
+            </div>
         </div>
     </div>
     <div id="sidebar-map" class="sidebar-map"></div>
