Updated the work I have done over the past two weeks, including headings to separate.

--- a/index.html
+++ b/index.html
@@ -59,8 +59,16 @@
                     - Began data analysis<br />
 		    - Built sqllite db for divvy data
                   <h2><a href="mailto:ddesut2@uic.edu">Dane DeSutter</a><br /></h2>
-                    - Made Mockups for final application<br />
- 		    - Setup planning / organization spreadsheet
+                  <h3>Week 1</h3>
+                    - Made vector mockups of application interface and icons <br />
+ 		                - Constructed planning / organization spreadsheet <br />
+                    - Conceptualized / designed graphical representations with necessary features to display Divvy datasets <br />
+                    - Researched Leaflet.js libraries necessary for desired functionality <br />
+                  <h3>Week 2</h3>
+                    - Ran Excel analyses on data corpus to create frequency distributions and determine what xis ranges and step sizes would best display the dataset <br />
+                    - Wrote a document detailing necessary data structures and the calls that would need to be placed to the database <br />
+                    - Wrote psuedo code to construct the necessary data structures <br />
+                    - Exported data from Excel analyses as JSON files matching the desired data structures to enable parallel d3 development <br />
               </div>
             </div>
             <div class="sidebar-pane" id="messages"><h1>Messages</h1></div>
