spelling fix / git push test

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   <h2><a href="mailto:mt@trustdarkness.com">Mike Thompson</a></h2>
                     - Setup initial map and sidebar<br />
                     - Setup Git for collaboration
-                  <h2><a href="mailto:bspahr314@gmail.com">Brian Spahr</a></h2>
+                  <h2><a href="mailto:bspahr314@gmail.com">Bryan Spahr</a></h2>
                     - Began data analysis<br />
 		    - Built sqllite db for divvy data
                   <h2><a href="mailto:ddesut2@uic.edu">Dane DeSutter</a><br /></h2>
