Edited my weekly jobs and removed the margin and padding in CSS

--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
       height: 100%;
       font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
     }
+
+    body  {
+      margin:0;
+      padding:0;
+    }
  
     a {
       text-decoration: none;
@@ -65,7 +70,7 @@
                     - Conceptualized / designed graphical representations with necessary features to display Divvy datasets <br />
                     - Researched Leaflet.js libraries necessary for desired functionality <br />
                   <h3>Week 2</h3>
-                    - Ran Excel analyses on data corpus to create frequency distributions and determine what xis ranges and step sizes would best display the dataset <br />
+                    - Ran Excel analyses on data corpus to create frequency distributions and determine what x-axis ranges and step sizes would best display the dataset <br />
                     - Wrote a document detailing necessary data structures and the calls that would need to be placed to the database <br />
                     - Wrote psuedo code to construct the necessary data structures <br />
                     - Exported data from Excel analyses as JSON files matching the desired data structures to enable parallel d3 development <br />
