updated weekly activity

--- a/index.html
+++ b/index.html
@@ -62,8 +62,14 @@
               <div id="contact">
                 <h1>Weekly activity:</h1>
                   <h2><a href="mailto:mt@trustdarkness.com">Mike Thompson</a></h2>
+                    <h3>Week 1</h3>
                     - Setup initial map and sidebar<br />
                     - Setup Git for collaboration
+                    <h3>Week 2</h3>
+                    - sidebar to the right with working controls<br />
+                    - Added rider breakdown demographics graphs<br />
+                    - Deployted SQL db<br />
+                    - Began work on python data interaction layer
                   <h2><a href="mailto:bspahr314@gmail.com">Bryan Spahr</a></h2>
                     - Began data analysis<br />
 		    - Built sqllite db for divvy data
