added progress info

--- a/index.html
+++ b/index.html
@@ -61,8 +61,11 @@
                     - Setup initial map and sidebar<br />
                     - Setup Git for collaboration
                   <h2><a href="mailto:bspahr314@gmail.com">Bryan Spahr</a></h2>
+                  <h3>Week 1</h3>
                     - Began data analysis<br />
-		    - Built sqllite db for divvy data
+					- Built test sqllite db for divvy data
+				  <h3>Week 2</h3>
+				    - Started work on SVG overview graphs
                   <h2><a href="mailto:ddesut2@uic.edu">Dane DeSutter</a><br /></h2>
                   <h3>Week 1</h3>
                     - Made vector mockups of application interface and icons <br />
