moving pie chart text labels

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
       text-decoration: none;
       color: darkblue;
     }
+    text {
+      z-index: 3000;
+    }
   </style>
   <title>CS424 - P2 - Divvy Map</title>
   <meta charset="utf-8" />
