--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <script src="js/d3.v3.min.js"></script>
   <script src="js/leaflet.js"></script>
   <script src="js/pie.js"></script>
-  <script src="js/365DayBar.js"></script>
+  <script src="js/yearDayBar.js"></script>
 </head>
 <body>
     <div id="map">
