fixed bug that prevented the graph from showing and which sidebar element was selected

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <div id="sidebar-right" class="sidebar">
         <!-- Nav tabs -->
         <ul class="sidebar-tabs" role="tablist">
-            <li><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
-            <li class="active"><a href="#profile" role="tab"><i class="fa fa-user"></i></a></li>
+            <li class="active"><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
+            <li><a href="#profile" role="tab"><i class="fa fa-user"></i></a></li>
             <li><a href="#messages" role="tab"><i class="fa fa-envelope"></i></a></li>
             <li><a href="#settings" role="tab"><i class="fa fa-gear"></i></a></li>
         </ul>
@@ -208,7 +208,7 @@
 	    .append("g")
 		.attr("transform", "translate(" + margin.left + "," + margin.top + ")");
 
-	d3.json("/static-json/day-of-week-distribution.json", function(error, data) {
+	d3.json("static-json/day-of-week-distribution.json", function(error, data) {
 	  x.domain(data.map(function(d) { return d.range; }));
 	  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
 
