moving icon js out of index.html

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
   <script src="js/pie.js"></script>
   <script src="js/yearDayBar.js"></script>
   <script src="js/stationPop.js"></script>
+  <script src="js/icons.js"></script>
 </head>
 <body>
     <div id="map">
@@ -120,73 +121,6 @@
     <script src="js/leaflet-sidebar.js"></script>
 
     <script>
-        // setup heatmap icons
-        var iS = [26, 40]; // size of the icon
-        var sS = [50, 32]; // size of the shadow
-        var iA = [22, 42]; // point of the icon which will correspond to marker's location
-        var sA = [4, 31];  // the same for the shadow
-        var pA =  [-1, -38]; // point from which the popup should open relative to the iconAnchor
-        var i1 = L.icon({ 
-          iconUrl: 'images/divy-0.png',
-          iconSize:     iS, // size of the icon
-          shadowSize:   sS, // size of the shadow
-          iconAnchor:   iA, // point of the icon which will correspond to marker's location
-          shadowAnchor: sA,  // the same for the shadow
-          popupAnchor:  pA // point from which the popup should open relative to the iconAnchor
-        })
-        var i2 = L.icon({ 
-          iconUrl: 'images/divy-1.png',
-          iconSize:     iS, // size of the icon
-          shadowSize:   sS, // size of the shadow
-          iconAnchor:   iA, // point of the icon which will correspond to marker's location
-          shadowAnchor: sA,  // the same for the shadow
-          popupAnchor:  pA // point from which the popup should open relative to the iconAnchor
-
-        })
-        var i3 = L.icon({ 
-          iconUrl: 'images/divy-2.png',
-          iconSize:     iS, // size of the icon
-          shadowSize:   sS, // size of the shadow
-          iconAnchor:   iA, // point of the icon which will correspond to marker's location
-          shadowAnchor: sA,  // the same for the shadow
-          popupAnchor:  pA // point from which the popup should open relative to the iconAnchor
-        })
-        var i4 = L.icon({ 
-          iconUrl: 'images/divy-3.png',
-          iconSize:     iS, // size of the icon
-          shadowSize:   sS, // size of the shadow
-          iconAnchor:   iA, // point of the icon which will correspond to marker's location
-          shadowAnchor: sA,  // the same for the shadow
-          popupAnchor:  pA // point from which the popup should open relative to the iconAnchor
-
-        })
-        var i5 = L.icon({ 
-          iconUrl: 'images/divy-4.png',
-          iconSize:     iS, // size of the icon
-          shadowSize:   sS, // size of the shadow
-          iconAnchor:   iA, // point of the icon which will correspond to marker's location
-          shadowAnchor: sA,  // the same for the shadow
-          popupAnchor:  pA // point from which the popup should open relative to the iconAnchor
-
-        })
-        var i6 = L.icon({ 
-          iconUrl: 'images/divy-5.png',
-          iconSize:     iS, // size of the icon
-          shadowSize:   sS, // size of the shadow
-          iconAnchor:   iA, // point of the icon which will correspond to marker's location
-          shadowAnchor: sA,  // the same for the shadow
-          popupAnchor:  pA // point from which the popup should open relative to the iconAnchor
-
-        })
-        var i7 = L.icon({ 
-          iconUrl: 'images/divy-6.png',
-          iconSize:     iS, // size of the icon
-          shadowSize:   sS, // size of the shadow
-          iconAnchor:   iA, // point of the icon which will correspond to marker's location
-          shadowAnchor: sA,  // the same for the shadow
-          popupAnchor:  pA // point from which the popup should open relative to the iconAnchor
-
-        })
         mapLink = 
           '<a href="http://openstreetmap.org">OpenStreetMap</a>';
         var osm = L.tileLayer(
