--- a/index.html
+++ b/index.html
@@ -23,48 +23,60 @@
     #graphs {
       left: 10px;
     }
-	
-	.chartDayOfWeek rect {
-	  fill: darkorchid;
-	}
+    .chartDayOfWeek rect {
+      fill: #ef6548;
+    }
+    .chartDayOfWeek text {
+      fill: black;
+      font: 10px sans-serif;
+      text-anchor: end;
+    }
+    .yaxis path,line {
+      fill: none; 
+      stroke: black; 
+      stroke-width; 1; 
+    }
+   .xaxis path,line {
+      fill: none;
+      stroke: black;
+      stroke-width; 1;
+    }
 
-	.chartDayOfWeek text {
-	  fill: black;
-	  font: 10px sans-serif;
-	  text-anchor: end;
-	}
   </style>
   <title>CS424 - P2 - Divvy Map</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
   <link rel="stylesheet" href="css/leaflet.css" />
 
   <link rel="stylesheet" href="css/leaflet-sidebar.css" />
+  <link rel="stylesheet" href="css/pikaday.css" />
   <script src="js/d3.v3.min.js"></script>
   <script src="js/leaflet.js"></script>
   <script src="js/pie.js"></script>
   <script src="js/yearDayBar.js"></script>
   <script src="js/stationPop.js"></script>
   <script src="js/icons.js"></script>
+  <script src="js/pikaday.js"></script>
 </head>
 <body>
     <div id="map">
     </div>
     
-    <div id="sidebar-right" class="sidebar">
+    <div id="sidebar-right" class="sidebar collapsed">
         <!-- Nav tabs -->
         <ul class="sidebar-tabs" role="tablist">
-            <li class="active"><a href="#home" role="tab"><i class="fa fa-bars"></i></a></li>
-            <li><a href="#profile" role="tab"><i class="fa fa-user"></i></a></li>
-            <li><a href="#messages" role="tab"><i class="fa fa-envelope"></i></a></li>
-            <li><a href="#settings" role="tab"><i class="fa fa-gear"></i></a></li>
+            <li><a href="#home" role="tab"><i class="fa fa-bar-chart"></i></a></li>
+            <li><a href="#messages" role="tab"><i class="fa fa-play"></i></a></li>
+
+            <li><a href="#profile" role="tab"><i class="fa fa-users"></i></a></li>
+            <li><a href="#settings" role="tab"><i class="fa fa-plug"></i></a></li>
         </ul>
 
         <!-- Tab panes -->
-        <div class="sidebar-content active">
-            <div class="sidebar-pane active" id="home">
+        <div class="sidebar-content">
+            <div class="sidebar-pane" id="home">
                 <h1>Overview Data</h1>
               <div id="graphs">
                 <div id="gender" style="display: inline"></div>
@@ -86,17 +98,18 @@
                     - sidebar to the right with working controls<br />
                     - Added rider breakdown demographics graphs<br />
                     - Deployted SQL db<br />
-                    - Began work on python data interaction layer
+                    - Began work on python data interaction layer<br />
+		    - Added popularity data as icon heatmap<br />
                   <h2><a href="mailto:bspahr314@gmail.com">Bryan Spahr</a></h2>
                   <h3>Week 1</h3>
                     - Began data analysis<br />
-					- Built test sqllite db for divvy data
-				  <h3>Week 2</h3>
-				    - Started work on SVG overview graphs
+		    - Built test sqllite db for divvy data
+		   <h3>Week 2</h3>
+                    - Started work on SVG overview graphs
                   <h2><a href="mailto:ddesut2@uic.edu">Dane DeSutter</a><br /></h2>
                   <h3>Week 1</h3>
                     - Made vector mockups of application interface and icons <br />
- 		                - Constructed planning / organization spreadsheet <br />
+ 		    - Constructed planning / organization spreadsheet <br />
                     - Conceptualized / designed graphical representations with necessary features to display Divvy datasets <br />
                     - Researched Leaflet.js libraries necessary for desired functionality <br />
                   <h3>Week 2</h3>
@@ -106,13 +119,31 @@
                     - Exported data from Excel analyses as JSON files matching the desired data structures to enable parallel d3 development <br />
               </div>
             </div>
-            <div class="sidebar-pane" id="messages"><h1>Messages</h1></div>
+            <div class="sidebar-pane" id="messages">
+              <h1>Playback Data</h1>
+              <input type="text" id="datepicker" value="Aug 24 2013">
+              <button id="datepicker-button">
+                Choose Date
+              </button>
+<script>
+    var picker = new Pikaday({
+        field: document.getElementById('datepicker'),
+        format: 'MMM DD YYYY',
+        trigger: document.getElementById('datepicker-button'),
+        minDate: new Date('2013-06-27'),
+        maxDate: new Date('2013-12-31'),
+        yearRange: [2013,2013]
+    });
+</script>
+            </div>
             <div class="sidebar-pane" id="settings">
               <h1>Libraries Used:</h1>
               <p>Third party libraries we used include the following:</p>
               <h3>d3</h3>
               <h3>leaflet</h3>
               <h3>leaflet-sidebar</h3>
+              <h3>font awesome icons</h3>
+              <h3>pikaday calendar</h3>
             </div>
         </div>
     </div>
@@ -225,12 +256,12 @@
 	  y.domain([0, d3.max(data, function(d) { return d.frequency; })]);
 
 	  chart.append("g")
-		  .attr("class", "x axis")
+		  .attr("class", "xaxis")
 		  .attr("transform", "translate(0," + height + ")")
 		  .call(xAxis);
 
 	  chart.append("g")
-		  .attr("class", "y axis")
+		  .attr("class", "yaxis")
 		  .call(yAxis);
 
 	  chart.selectAll(".bar")
@@ -240,7 +271,7 @@
 		  .attr("x", function(d) { return x(d.range); })
 		  .attr("y", function(d) { return y(d.frequency); })
 		  .attr("height", function(d) { return height - y(d.frequency); })
-		  .attr("width", x.rangeBand());
+		  .attr("width", x.rangeBand()-8);
 	});
 
 	function type(d) {
@@ -249,6 +280,5 @@
 	}
 
 	</script>
-	
 </body>
 </html>
