--- a/index.html
+++ b/index.html
@@ -41,6 +41,40 @@
       stroke: black;
       stroke-width; 1;
     }
+    #dashes { 
+      position: absolute;
+      left: 70px; 
+      top: 116px;
+      z-index: 3000;
+    }
+    ul#day {
+      list-style: none;
+    }
+    #day li {
+      width: 300px;
+      padding-top: 6px;
+      padding-bottom: 6px;
+      padding-left: 35px;
+      border-bottom: 1px solid #aeaeae;
+    }
+    #day li.selected {
+      background-color: lightblue;
+    }
+    #day #sunrise {
+      position: absolute;
+      top: 305.375px;
+      left: 5px;
+      color: #666;
+      font-size: -1;
+    }
+    #day #sunset {
+      position: absolute;
+      top: 714.425px;
+      left: 5px;
+      color: #666;
+      font-size: -1;
+    }
+
 
   </style>
   <title>CS424 - P2 - Divvy Map</title>
@@ -120,21 +154,51 @@
               </div>
             </div>
             <div class="sidebar-pane" id="messages">
-              <h1>Playback Data</h1>
+              <h1>Playback A Day's Rides</h1>
               <input type="text" id="datepicker" value="Aug 24 2013">
               <button id="datepicker-button">
                 Choose Date
               </button>
-<script>
-    var picker = new Pikaday({
-        field: document.getElementById('datepicker'),
-        format: 'MMM DD YYYY',
-        trigger: document.getElementById('datepicker-button'),
-        minDate: new Date('2013-06-27'),
-        maxDate: new Date('2013-12-31'),
-        yearRange: [2013,2013]
-    });
-</script>
+              <script>
+                var picker = new Pikaday({
+                  field: document.getElementById('datepicker'),
+                  format: 'MMM DD YYYY',
+                  trigger: document.getElementById('datepicker-button'),
+                  minDate: new Date('2013-06-27'),
+                  maxDate: new Date('2013-12-31'),
+                  yearRange: [2013,2013]
+                });
+              </script>
+              <ul id="day">
+                <i id="sunrise" class="fa fa-sun-o"> 6:15am</i>
+                <i id="sunset" class="fa fa-moon-o"> 7:41pm</i>
+                <li>12 am</li>
+                <li> 1 am</li>
+                <li> 2 am</li>
+                <li> 3 am</li>
+                <li> 4 am</li>
+                <li> 5 am</li>
+                <li> 6 am</li>
+                <li> 7 am</li>
+                <li> 8 am</li>
+                <li> 9 am</li>
+                <li>10 am</li>
+                <li>11 am</li>
+                <li class="selected">12 pm</li>
+                <li> 1 pm</li>
+                <li> 2 pm</li>
+                <li> 3 pm</li>
+                <li> 4 pm</li>
+                <li> 5 pm</li>
+                <li> 6 pm</li>
+                <li> 7 pm</li>
+                <li> 8 pm</li>
+                <li> 9 pm</li>
+                <li>10 pm</li>
+                <li>11 pm</li>
+                <li>12 am</li>
+                <img id="dashes" src="images/vert-dashes.png" />    
+              </ul>
             </div>
             <div class="sidebar-pane" id="settings">
               <h1>Libraries Used:</h1>
